# nvidia-smi-opt

./: CMakeLists.txt  Makefile_deprecated  README.md  auto_build.sh  tags
src/: common.h  nvml_intercepter.cpp  nvml_stub.cpp  nvml_stub.h
src/system/: dl_func.cpp  dl_func.h  proc_info.cpp  proc_info.h
